--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
 	background: -webkit-gradient(linear, left top, right top, from(#5ABBE5), to(#30566B));
 
 }
+#titulo{
+	font-style: bold;
+	font-family: 'Exo 2';
+	font-size: 40px;
+}
 .container{
 	margin-bottom: 100px !important;
 }
