--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 	font-style: bold;
 	font-family: 'Exo 2';
 	font-size: 40px;
+	text-align: center;
 }
 .container{
 	margin-bottom: 100px !important;
