--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import "fonts.css";
-#menu{
+#barra-status{
 	background: -webkit-gradient(linear, left top, right top, from(#5ABBE5), to(#30566B));
 }
 #titulo{
