--- a/css/fonts.css
+++ b/css/fonts.css
@@ -57,3 +57,21 @@
   font-weight:normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "Exo 2-Bold";
+  src: url("../fonts/Exo2-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Exo 2-Medium";
+  src: url("../fonts/Exo2-Medium.ttf") format("truetype");
+  font-weight: medium;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Exo 2-Regular";
+  src: url("../fonts/Exo2-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
