--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@
 }
 #barrinha{
 	background-color: #5ABBE5;
-    padding: 1.5% 1.5% 73%;
+	margin-top: 15%;
+	margin-left: 50%;
+    padding: 1.5% 1.5% 65% !important;
     width: 0px;
 
 }
@@ -72,8 +74,17 @@ h5{
     font-size: 32px;
 	color: #FFFF;
 }
-
-
+h7{
+	font-style: bold;
+	font-family: 'Exo 2-Semi';
+    font-size: 45px;
+	color: #323B43;
+	margin-left: -30%;
+}
+button{
+	background-color: #30566B;
+	border-radius: 10% !important;
+	}
 p{
 	font-family: Roboto-Medium;
     font-size: 30px;
