--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@
 }
 #barrinha{
 	background-color: #5ABBE5;
-	margin-top: 15%;
+	margin-top: 20%;
 	margin-left: 50%;
-    padding: 1.5% 1.5% 65% !important;
+    padding: 1.5% 1.5% 50% !important;
     width: 0px;
 
 }
@@ -39,6 +39,12 @@
 }
 html{
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.editarperfil{
+	font-size: 150%;
+	text-align: left !important;
+	margin-top: 15%;
+	color: #FFF;
 }
 h2{
 	font-style: normal;
@@ -74,12 +80,13 @@ h5{
     font-size: 32px;
 	color: #FFFF;
 }
-h7{
+.pessoa{
 	font-style: bold;
 	font-family: 'Exo 2-Semi';
-    font-size: 45px;
+    font-size: 350%;
 	color: #323B43;
 	margin-left: -30%;
+	margin-top: 20%;
 }
 button{
 	background-color: #30566B;
