--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
     width: 0px;
 }
 #barrinha2{
+	background-color: #5ABBE5;
 	margin-top: 25%;
 	margin-left: 50%;
     padding: 1.5% 3% 125% !important;
@@ -40,6 +41,10 @@
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%); 
+}
+.textobotao{
+
+		text-align: center;
 }
 #container3{
 	margin-top: 14% !important;
