--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,47 @@
 .container{
 	margin-top: 10% !important;
 }
+
+/* IPHONE X+ SCREEN FIX FOR MATERIALIZE
+// See: https://css-tricks.com/the-notch-and-css/
+*/
+.footer-fixed footer {
+	padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
+
+/* CUSTOM FIXED FOOTER FOR MATERIALIZE
+*/
+.footer-fixed {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+}
+
+
+/* CUSTOM FOOTER LAYOUT
+/ Poorly done. Should probably use flexbox here to distribute the <li> elements.*/
+footer {
+	ul {
+		&.justify {
+			text-align: center;
+			display: table;
+			overflow: hidden;
+			margin: 0 auto;
+			li {
+				margin-left:auto;
+				margin-right:auto;
+				/*width: 138px; // 3 ICONS
+				//width: 100px; / 4 ICONS*/
+				width: 82px; /* 5 ICONS*/
+			}
+		}	
+	}
+}
+
+.img-icon{
+	width: 20px;
+}
+
 html{
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
