--- a/css/style.css
+++ b/css/style.css
@@ -75,18 +75,18 @@
 /* CUSTOM FOOTER LAYOUT
 / Poorly done. Should probably use flexbox here to distribute the <li> elements.*/
 footer {
-	ul {
-		&.justify {
-			text-align: center;
-			display: table;
-			overflow: hidden;
-			margin: 0 auto;
-			li {
-				margin-left:auto;
-				margin-right:auto;
-				/*width: 138px; // 3 ICONS
-				//width: 100px; / 4 ICONS*/
-				width: 82px; /* 5 ICONS*/
+		ul {
+			&.justify {
+				text-align: center;
+				display: table;
+				overflow: hidden;
+				margin: 0 auto;
+				li {
+					margin-left:auto;
+					margin-right:auto;
+					/*width: 138px; // 3 ICONS
+					//width: 100px; / 4 ICONS*/
+					width: 82px; /* 5 ICONS*/
 			}
 		}	
 	}
@@ -165,7 +165,7 @@ h7{
 button{
 	background-color: #30566B;
 	border-radius: 10% !important;
-	border-style: none;z
+	border-style: none;
 	}
 p{
     margin: 0;
