--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 	text-align: center;
 	align-items: center;
 	vertical-align: middle;
-	position: relative;
+	position:relative !important;
 	top: 50%;
 	transform: translateY(-50%); 
 }
@@ -63,6 +63,7 @@
 	padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
+
 /* CUSTOM FIXED FOOTER FOR MATERIALIZE
 */
 .footer-fixed {
@@ -72,28 +73,30 @@
 }
 
 
-/* CUSTOM FOOTER LAYOUT
-/ Poorly done. Should probably use flexbox here to distribute the <li> elements.*/
 footer {
-		ul {
-			&.justify {
-				text-align: center;
-				display: table;
-				overflow: hidden;
-				margin: 0 auto;
-				li {
-					margin-left:auto;
-					margin-right:auto;
-					/*width: 138px; // 3 ICONS
-					//width: 100px; / 4 ICONS*/
-					width: 82px; /* 5 ICONS*/
-			}
-		}	
-	}
 }
+	
+	.justify {
+		
+		text-align: center;
+		display:table;
+		overflow: hidden;
+		margin: 0 auto;
+}
+			li {
+				margin-left:auto;
+				margin-right:auto;
+				
+				width: 190px;
+			}
+			
+
+
+
 
 .img-icon{
-	width: 20px;
+	width: 60px;
+	text-align: center;
 }
 
 html{
