--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 	background-color: #5ABBE5;
     height: 191px;
 }
-.categorias{
+.categorias{0
 	background-color: #5ABBE5;
 }
 .menu-cima{
@@ -72,6 +72,9 @@
 .container{
 	margin-top: 10% !important;
 }
+.categorias{
+	background-color: #5ABBE5;
+}
 
 /* IPHONE X+ SCREEN FIX FOR MATERIALIZE
 // See: https://css-tricks.com/the-notch-and-css/
@@ -107,13 +110,75 @@ footer {
 				width: 190px;
 			}
 			
-
-
-
-
 .img-icon{
 	width: 60px;
 	text-align: center;
+}
+
+
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 20px 0;
+  width: 100%;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: #03a9f4;
+  border-radius: 25px;
+}
+input[type=range]::-webkit-slider-thumb {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #fff;
+  box-shadow: 0 0 4px 0 rgba(0,0,0, 1);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -8px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #03a9f4;
+}
+.range-wrap {
+  position: relative;
+  margin: 0 auto 3rem;
+}
+.range {
+  width: 100%;
+}
+.bubble {
+	top: -25px;
+	width: 30px;
+	height: 24px;
+	line-height: 24px;
+	text-align: center;
+	background: #03a9f4;
+	color: #fff;
+	font-size: 12px;
+	display: block;
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, 0);
+	border-radius: 6px;
+}
+.bubble::after {
+  	content: "";
+	position: absolute;
+	width: 0;
+	height: 0;
+	border-top: 10px solid #03a9f4;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	top: 100%;
+	left: 50%;
+	margin-left: -5px;
+	margin-top: -1px;
 }
 
 html{
