--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 	background-color: #5ABBE5;
     height: 191px;
 }
-.categorias{0
+.categorias{
 	background-color: #5ABBE5;
 }
 .menu-cima{
@@ -128,7 +128,7 @@ input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 4px;
   cursor: pointer;
-  animate: 0.2s;
+  animation: 0.2s;
   background: #03a9f4;
   border-radius: 25px;
 }
@@ -483,3 +483,66 @@ button:focus{
 .img-modal{
     margin: 50px 0px 88px 0;
 }
+.rectangle-33 {
+	margin-top: 16px;
+	margin-bottom: 16px;
+	background-color: rgba(235, 240, 241, 1);
+	border-radius: 7px;
+	height: 175px;
+	width: 90%;
+  }
+  .bexiga {
+	letter-spacing: 0px;
+	min-height: 16px;
+	width: 111px;
+  }
+  .exo2-semi-bold-tuna-16px {
+	color: var(--tuna);
+	font-family: "Exo 2-Bold";
+	font-size: 40px;
+	font-style: normal;
+	font-weight: 600;
+  }
+  :root {
+	--tuna: rgba(50, 59, 67, 1);
+  }
+  .avanar {
+	height: 150px;
+	letter-spacing: 0px;
+	line-height: 19.2px;
+	min-height: 59px;
+	text-align: center;
+	width: 400px;
+	align-items: center;
+	vertical-align: middle;
+	position:relative !important;
+	top: 50%;
+	transform: translateY(-50%); 
+  }
+  .exo2-bold-white-16px {
+	color: white;
+	font-family: "Exo 2-Bold";
+	font-size: 35px;
+	font-style: normal;
+	text-align: center !important;
+	font-weight: 700;
+	align-items: center !important;
+	vertical-align: middle !important;
+	position:relative !important;
+	top: 50%;
+	transform: translateY(-50%); 
+  }
+  .valign-text-middle {
+	display: flex;
+	flex-direction: row;
+	justify-content: center !important;
+	text-align: center !important;
+	align-items: center !important;
+	vertical-align: middle;
+	position:relative !important;
+	top: 50%;
+	transform: translateY(-50%); 
+	
+  }
+
+ 
