--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,16 @@
     padding: 1.5% 1.5% 100% !important;
     width: 0px;
 }
+#barrinha4{
+	background-color: #FFF;
+	margin-top: 20%;
+	margin-left: 50%;
+    padding: 3% 3%  !important;
+    width: 0px;
+	height: 50px;
+	border-radius: 10px;
+
+}
 #titulo{
 	font-style: bolder;
 	font-family: 'Exo 2-Bold';
