--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ footer {
 			}
 			
 .img-icon{
-	width: 60px;
+	height: 70px;
 	text-align: center;
 	justify-content: center;
 	margin-top: 10%;
