--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,15 @@
 	border-radius: 10px;
 
 }
+#barrinha5{
+	background-color: #5ABBE5;
+	margin-top: 25%;
+	margin-left: 50%;
+    padding: 1.5% 6% 125% !important;
+    width: 0px;
+	border-radius: 10px;
+
+}
 #titulo{
 	font-style: bolder;
 	font-family: 'Exo 2-Bold';
@@ -270,6 +279,7 @@ h7{
     text-align: left;
     font-size: 150%;
 	color: #323B43;
+	margin-bottom: 10px;
 }
 h3{
 	font-style: bold;
